--- a/strategy/faq.mdx
+++ b/strategy/faq.mdx
@@ -1,20 +1,15 @@
 ---
 title: "Strategy FAQ"
-description: "Frequently asked questions about the JLP Delta Neutral strategy"
+description: "Frequently asked questions about the JLP BTC Neutral strategy"
 icon: "circle-question"
 ---
-
-<Note>
-For questions about risks and risk management, please see our comprehensive [Risk Documentation](/strategy/risks).
-</Note>
-
 ## General Questions
 
 <AccordionGroup>
-  <Accordion title="What is the difference between JLP Delta Neutral's displayed APY and Jupiter's displayed APY?">
+  <Accordion title="What is the difference between JLP BTC Neutral's displayed APY and Jupiter's displayed APY?">
     There are three different APY figures to consider:
 
-    1. **JLP Delta Neutral Target APY**: 10% (bear market) to 20% (bull market)
+    1. **JLP BTC Neutral Target APY**: 10% (bear market) to 20% (bull market)
        - This is based on market conditions, reflecting an average across different market scenarios
 
     2. **JLP Website Displayed APY**: Often higher (e.g., 40%+)
