--- a/strategy/risks.mdx
+++ b/strategy/risks.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Risks & Controls"
-description: "Understanding the risks and control mechanisms in the JLP Delta Neutral strategy"
+description: "Understanding the risks and control mechanisms in the JLP BTC Neutral strategy"
 icon: "shield-exclamation"
 ---
 
@@ -78,8 +78,6 @@ Our comprehensive risk monitoring system includes:
    - Regular system audits
    - Continuous infrastructure testing
    - Geographic distribution of critical components
-
-<img src="/images/risk-monitoring-dashboard.png" alt="Risk Monitoring Dashboard" className="w-full" />
 
 ## Asset Strategy
 
