--- a/technical/security.mdx
+++ b/technical/security.mdx
@@ -1,9 +1,10 @@
 ---
 title: "Security Model"
 icon: "shield-halved"
+description: "How maxBTC protects assets and manages risk"
 ---
 
-Security is a core consideration in maxBTC's design. This document outlines the technical security measures implemented across different components of the system.
+Security is a core consideration in maxBTC's design. This document outlines the key security measures implemented across the system.
 
 ## Multisig Implementation
 
