--- a/strategy/details.mdx
+++ b/strategy/details.mdx
@@ -6,7 +6,7 @@ icon: "lightbulb"
 
 ## Strategy Components
 
-<div className="grid grid-cols-1 md:grid-cols-2 gap-4 mt-6">
+<CardGroup cols={2}>
   <Card>
     <div className="flex items-center mb-4">
       <div className="mr-2 text-xl text-amber-500">
@@ -52,7 +52,7 @@ icon: "lightbulb"
       </div>
     </div>
   </Card>
-</div>
+</CardGroup>
 
 ```mermaid
 graph TD
@@ -162,24 +162,12 @@ We expect long-term APY to stabilize in the 10-20% range over time, depending on
 <Card title="Optimal Rebalancing Logic" className="w-full mb-6">
   Our rebalancing system uses a proprietary algorithm to determine the optimal timing and size of rebalancing operations, considering:
   
-  <div className="grid grid-cols-1 md:grid-cols-2 gap-4 mt-3">
-    <div className="flex items-center">
-      <div className="w-1.5 h-2 rounded-full bg-amber-500 mr-1.5"></div>
-      <span>Gas costs vs expected arbitrage profit</span>
-    </div>
-    <div className="flex items-center">
-      <div className="w-1.5 h-2 rounded-full bg-amber-500 mr-1.5"></div>
-      <span>Market slippage on entry/exit</span>
-    </div>
-    <div className="flex items-center">
-      <div className="w-1.5 h-2 rounded-full bg-amber-500 mr-1.5"></div>
-      <span>JLP price deviations from NAV</span>
-    </div>
-    <div className="flex items-center">
-      <div className="w-1.5 h-2 rounded-full bg-amber-500 mr-1.5"></div>
-      <span>Market volatility conditions</span>
-    </div>
-  </div>
+  <ul className="list-disc pl-5 mt-3">
+    <li>Gas costs vs expected arbitrage profit</li>
+    <li>Market slippage on entry/exit</li>
+    <li>JLP price deviations from NAV</li>
+    <li>Market volatility conditions</li>
+  </ul>
 </Card>
 
 ```mermaid
